tests/failing/2-comptime-format-unused-invalid/main.af
fmt: /std/fmt

unused: () {
    fmt.new(
        "trailing %",
        fmt.end, @write(ok: @exit(0))
    )
}

main: () {
    @exit(0)
}
